# sbsp_protocol

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cleanup_and_deploy.sh  docker-entrypoint.sh  main.py  pyproject.toml  rebuild.sh  setup.py  topology.yml  topology.yml.annotations.json
clab-sbsp-lab/: ansible-inventory.yml  authorized_keys  nornir-simple-inventory.yml  topology-data.json
clab-sbsp-lab/.tls/ca/: ca.key  ca.pem
gemini_code/: Dockerfile  topology.yml
gemini_code/algo/: barrier_sssp.py
gemini_code/daemon/: main.py
gemini_code/tests/: test_algo.py
sbsp/algo/: barrier_sssp.py
sbsp/daemon/: advertise.py  compute.py  hello.py  lsdb.py
tests/: test_sbsp.py
